# releaser

./: .coveragerc  .cz.json  .gitignore  CHANGELOG.md  Makefile  README.md  action.yaml  flake.nix  pyproject.toml
.github/workflows/: check.yml  ci.yml  release.yml  self_release.yml  test_release.yml
src/releaser/: __init__.py  __main__.py  bump.py  check.py  cli.py  release.py
src/releaser/changelog_templates/: __init__.py  github_linked_sha.md.j2  templates.py
src/releaser/core/: __init__.py  commits.py  repository.py  version.py
tests/: helper.py  test_bump.py  test_check.py  test_cli.py  test_release_scenario.py
tests/core/: test_commits.py  test_repository.py
tests/resources/: changelog_v010.md.j2  changelog_v011.md.j2  changelog_v100.md.j2  test_scenario_log_v010.txt  test_scenario_log_v011.txt  test_scenario_log_v100.txt
